# ChangeLog for net-misc/usbip
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/usbip/ChangeLog,v 1.8 2015/03/17 15:51:38 chithanh Exp $

  17 Mar 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  usbip-3.19.ebuild:
  Re-add usbip after it was removed from sys-apps/linux-misc-apps-3.18, bug
  #395871 and bug #460960.

  19 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> usbip-3.6.ebuild:
  Fix building with USE="tcpd" by not using $(use_with) here.

  18 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -usbip-0.1.7.ebuild:
  old

*usbip-3.6 (18 Nov 2012)

  18 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> +usbip-3.6.ebuild:
  Version bump wrt #395871 by Salah Coronya

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> usbip-0.1.7.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*usbip-0.1.7 (07 Mar 2010)

  07 Mar 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +usbip-0.1.7.ebuild, +metadata.xml:
  initial import for bug 220771
