@@ -2,25 +2,25 @@
 Hash: SHA256
 
 DIST linux-3.19.tar.xz 81688872 SHA256 be42511fe5321012bb4a2009167ce56a9e5fe362b4af43e8c371b3666859806c SHA512 d77bfd9b1cd524ac50bb5a93808955be2f9bcd2ec0badcc8aa6a63401e212f891fd14bd27c6441174ba5d70ab875b9e76c7ebc95f046e31aff1d40790d30351c WHIRLPOOL 76a17bb3d7c30cee19e135940f3607106efb2984061f946f0da9a2ddd602dc1bfc7e6f8970975cfb113d13f23a75415f39938204af266e2819e7a239b6f46778
-EBUILD usbip-3.19.ebuild 1191 SHA256 870f01a4dba54f68bf3acf6876b0d6f65ae7c493b7fd4229be33b6a1fa8e4603 SHA512 a86457b7b5f220b9f35321ccc6d932269734083c3bf89f989c463b6fbf76acb6b61e60ba4b3614048659b22617a8df0117654b7a1f49b88320f3ed277ee34163 WHIRLPOOL 8d5b0159dc531c524c04a972b01c8e7ab9909747cc4212e7b71510edcee713c4f07f8d40964699eb4075a0a97c49361b0bb943666f06cebf19e88d41ec1b6ff1
-MISC ChangeLog 1038 SHA256 ed06e4d5a9bf95500b2189bcac3814c664e1f998b2ee8040383fe5272e57d3f8 SHA512 b1e35f90dc1b3393907df2ded18dfdb075fb4cd367a880a81fe5e8602f71b1bea5e945b550d202864e1971932ad63b15747cee33e9ec9812bcca4c63be4eddc1 WHIRLPOOL 5a2b90d9e5104331b65d1b3173a5b16da914e5179b6f615c155374d9893429b9938da2f7d212e9a4e0b20f3397d8a7bb11df8c742b03f1a830dbcc3f36c36432
+EBUILD usbip-3.19.ebuild 1280 SHA256 6bfa22b3533007aab0d7eea3716f3158b8f132922e85813460098010db610731 SHA512 b4f1c15df80662c20b9695438d79d9e24b523dd93e75b9d7adff12e3bb2fdf629fe6caa0c103b1567e0f20deb5e60271984141da2403fd9e3981eb5a04510ae9 WHIRLPOOL 200959c5560db5eb3b979693b06ca7824c49fec0833b2d23082085be25d2fc07f9cd8cfeb543c66c681bfdbaf5d263ece3b47cead06c9aaa32bb7e6c8d1a0ed5
+MISC ChangeLog 1213 SHA256 a3b8f3f43b010e3aafd93ee9ef08ca2d69d2e13ed460bfcf825dfccc386a59e3 SHA512 79b94ebd298d2511add290a452aa08ec6744216cf813cba047d51b5c117de3a03f5efbeaf14f33282992432a1520aef035093f8e0f502a081be2c27e2a8b957c WHIRLPOOL f4ec7c42585ca48549bf2f2b07db6509b6e2f4efdc581c181160f69e6fbd8cf0e67a78a2f11ea4820f776918a2aa5b5f5d6c3d62b943834c37bf888e9af2d11d
 MISC metadata.xml 253 SHA256 2033971042ce53f0af10bdc9f59bd2aba7b8490f0eafbca62a9e8ffd49d23c5d SHA512 cd887d2863b319dabf8598d349740e8d2223a03b0432157a421933a1a98b6140ad4b56f4750244da7d2545b56fb59567aae00d1e822e7cd90d3cb2b3d464ef01 WHIRLPOOL 95f9871ded20192d86cd4dc49f4471d0ddc884bc804980bcbedc6c4d1f90ebc25e30231dd2a56e8e5a33762cf3f660250934b1299042956d6eba74a7b6d9c81b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJVCE2rXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVJP5RXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RDFCODdDQUUxMkUwNkJCNjUyMDMxOEIy
-MzI0RTdCNTY2REYyNjExAAoJECMk57Vm3yYR+NEP/0XhrzAMgEwtykY0jeeQ05UW
-q0N6DqDgJxuGHZZZavwepO3a+HoYj5/oS3B19wSz13iMWWQ88pvbG0+hT5RXwnf1
-hH3J5JNxSpEo/0wNBspUijH5sGExNyogfLPdiL3G715k1usKbwXyC2yPGXxAFl1G
-oIBuNaW/lwp1V9yfVQCvifWDIvR+Ez8R4cfO9zz6APdi5nfDZpzhvLwTpCnFmelX
-9upB4X7PMlfy9PHJ0dGxLck5v0jZir9ClxcGySKOmVil6cBblNm7rZ4+XHajHTGq
-JtCaln2NfZu6V+68rGslEkaqgMkkLgEYDYH2JcyhPK0P/jMb5uh7bmZ4xDidBGzA
-4pmcTNgLZkwYYvdiaPhuM6xeIOoRbrN1zgXfJYCplHJhVbCzFucbKaFzgmqAb5pa
-MlP99kgtVu1iFMOmeuiJQv4HLQSzRx9ESSdaHOEmL9QVw/7Bn271CW5VTSssri0B
-cu8B5669ejOZB6MdfGUeyQyCh6KqFFUISoXC9wDN5pOqZZMpJ1VF+/36Bqtl4QFm
-VNSvrRxcKrIG1qxq2XxYWhPKVWLuAAOWsSRDFvUQXYQPCbn+8zQN+IYyzgJtppM6
-0+ijDfpFC2fnp7WIV9ZOvwJC1ilcbdATwPYz7qCNCB0ysHuGxQLpAB1es/v0Nwa+
-i+mJosNtk7Dlk1+foY0L
-=mSU2
+MzI0RTdCNTY2REYyNjExAAoJECMk57Vm3yYRCIMP/ikx3mC1gxzsNPnZtTq9p2oY
+FIVRlZexlGeULMnbsNkSQDvNA98C6HCW/4ecjugmqQayK2WxRKYNGGD90Fq8AWI+
+btu48MgIUgEHwpFju+GMDQoJAu77XbLKQ8d6iC2BfwabaQN2woxXlEmugHWc+7a2
+3SEwaxR6ZtUGDrbd/xWwjAsOs/mZy0l4lJQbBWrbIuul5i93u1IfD1L661cPFtMV
+Ob8D+VP0bfhVggqPZya5fzUTBM9jAhxxj4S/4Y2tusbToN8Z4gg2px4vouNF9sT9
+5l762txa5jxHkne9oxFghfc85OFFvaHJw1TL7jfey9WQde1wgykIcVjJqJjVYDJX
+eLKXV37NlMf8RMlJFBrguBGr8yEMshpjK3aFYyskm2jAIK0wJCvbtpkxpV0fSQsA
+dwT+0EMAqFwVuIcqP5GmWdewmOpQ5W6+rexDf41Znt07yzy2qoSHlEk+pJMAh94F
+zD4Uhdikc869SYWsAYs9SnP+nDShT/NzykTD1AhZoJ1KUY+Qgps9kWrvE8uby/fG
+o60ZZR3A3/qqXiPZs8X7d1dDQZAOboSAy1CRE/7HGEHXL1l+nKOuGzvlN2AJY+xY
+P1O102B3TltgF2huMDojXzvR5V5dAfNP8ArnMjiqL6UsaupZmKiU1dI8ssQSVpqp
++UPN8ikLrrEVna4zX0rm
+=N1+F
 -----END PGP SIGNATURE-----
