@@ -8,24 +8,26 @@ AUX gnuradio-9999-build-type-nonfatal.patch 619 SHA256 35fb7fe91213537f89224249d
 DIST gnuradio-3.6.5.1.tar.gz 3150283 SHA256 0875d2f0a7da0f3bcc1771b528b0f98f79d9ab69aa1ef953651bbbe1f57b4621 SHA512 23a22aed482da11005b17e5197ee3ba24d442b30309522b0858e694b58f46b76cc050143d365623c7dd4241cdf8b9f988e1a4dabe2e1f98d0fd4cca71bbb82e8 WHIRLPOOL 7cf55be5fac7891a737d228d83718bbc43f9069c6275c5ac465ae11088559dca5e7fa31239e281271b529aa8b9ae1a0efe3850a16a40e53c0f1fe57e351ff2a8
 DIST gnuradio-3.7.6.1.tar.gz 3588833 SHA256 39dede70eec36f430c4895900bbd7ed266aa9e846d0a362987e806b7197c4c0b SHA512 88ec30b2bd93ca032c29f4606856a8e70b0123474fd84115657804429f381dea78f97a7523c9684acad6a27b357ddf876632e957de5c6e0170045dc38d121939 WHIRLPOOL 97d70e403fe46b0afbd1e6f0812f8d9de4ea506dcb2190a23d9a0f0499662f9e2bbaa86d1b624f7c621ae1675094f92cd295bc273db0759b2647e2dfb2a49b43
 EBUILD gnuradio-3.6.5.1-r2.ebuild 5601 SHA256 93cf9a2d92ecf28f7147343279ce2b8a8a66aa27fed53099f9d9873106a2159d SHA512 fe77be87f2f17ed2d28a311f0c8c16147c790b04e92c36ab9e2b181b94c535afe3d3122a15531277049384dac17c83cd0d9fe47a4e007f899ee608a5f1a5abaa WHIRLPOOL de62e59571dfdd082b545a4ec90541f2db9971f586b95f74c2af48076e96c51c9a249ce4ce9ef30c191be631fe23574559a7e230c98466af9529a7d69ecb0ac5
-EBUILD gnuradio-3.7.6.1-r2.ebuild 6928 SHA256 93e6130764b797db0a18bb6f510dc387a6bb76de09b271046495f47a65c8ddae SHA512 c33506a3fef37f61d26b8f85dc710a099374121a7ee26315c83357ab534f87b740d883cc72b7b9f7a8eedc98caec6d54bbd18e1b8d78e67d30647505ce5fd44b WHIRLPOOL f41a9021cd917eb98ec9fbb2337a9cea5eed5d6565b012a0bfd30c5cd2e4e5cf61035339e934c28dd85fd4d8b464ba6913293373bc52bdfc3022b9e15feaf2f4
-EBUILD gnuradio-9999.ebuild 6869 SHA256 d2ea530278e7019da04c8b4ece844c79e3cc29bedfa11bd0d9d5b7a5af2bbb20 SHA512 57f5930c25dee95bc73b1a8ab573d74591d5b0084de03d47247be6a02600a3d14640fff0ae889d04080a2e353935eb650b82b9956981e82c688bc502aab880b4 WHIRLPOOL 75c3c7e1f22a803b7142bcb318328d8361e44552daa527e4a52e09c116cfa1fb2cd6931de542c8cb59b5c9d75aebc8f72908aea38acd34d4237a524329e856e1
-MISC ChangeLog 12829 SHA256 5a886d4e4227719cef4b73cebe763b42f0783161e8969724dab080d9f52ce073 SHA512 39b724bda74d6d2e42bcb9eb7281abe5a55366c5babe8a1674afe57fa0aa82c5d884fefeee97dc43cf9882d983e3fba62d2647ea8f3713f94b03ad7ae09a3383 WHIRLPOOL a248e6a9a22fd7d31f780359383d56e1a49018427f4f10180c3a9158958b46a60aae3f0370f85de0635df1840d0c80ed1ae1bc477dac68116226145f806aa718
+EBUILD gnuradio-3.7.6.1-r2.ebuild 6942 SHA256 03e370181193c9d5a2672a03dcdfc93682bed979476a0afce1d93ad2847dc5f4 SHA512 d168ff6b48a117f1a4842af9bb45babb5ecfc27dba60e33c95c5924d378a720c518f911b8b672303b0a4666bece0eacd58c09a9d7fb9c5088b0a33a42e135884 WHIRLPOOL 1ee822dd9d75c9988be14cce075a2c0d1395e223e4cce1f05d700af5b6c3cd4b130181cd5445ddd65d9b1ee2bddf450483618557d6576db332b7b76c31132fa1
+EBUILD gnuradio-9999.ebuild 6883 SHA256 2f39059e657f81fa9bb3a2d3998e13497acf957b98e6f1b207cc9dc68e25af88 SHA512 dfea495a66be23f98c201d6bb46c97f6bdc7a7f44826f1e11b441a439d1a02dbe38f65e98e5706c0f843f756bc9dadfb51641a0b69b706974344d22b05cf49ec WHIRLPOOL 4173a0f20f3093cbd9cdd5699eb8cfbdad1fe2ea6f873e7d6272629b8f7759628d38a06022906cbefe3a216ef3bb18164604ff0462e90ced03363e9b5c6728e8
+MISC ChangeLog 13094 SHA256 29ce76853cf7cacbf3a577f55a8ade16ca5c45db0cdbca706cebc0d5a0b8e9ae SHA512 c697f9853ba5dd849c5b7f8a85391e2138fc5f401060396c480a2b0d86f573a7720160000b3c177e91daff6d0504e458fc6aea9e0b94a9c347459e67a050bb70 WHIRLPOOL 6124bfe23630e60f8db6c3f66e6aae91695262cf420d2314ee7a3318f72e648195688c1dc470fd63ee7cbfd3e77d694b8ad478447b072f28b3469f034290b9a1
 MISC metadata.xml 1696 SHA256 9fe983b3a2691e135844e8001885e822be07f4aa675424ed1ea3408dff48b012 SHA512 3fa9a8aa9b6c673f1ce33ddd9f366dc565e7206a4dfed818f2b56ba20a78c2f49760d75c995490ea4c22a708e5c0c28bf67c4c78521a79dd32d616686f2c79d6 WHIRLPOOL 3fe461e8a457c585b5ec58253757ad6ef812b0249f1f250e52cf43c6c12f9b65b6f304e0d42a999d9caccaa6fcd17aa9f87ced1a27975796ead2e03f3750bc4a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQIcBAEBCAAGBQJVG1JQAAoJEKXdFCfdEflKN2AP/j2sTkTAEQFmn0NB/6iVMSEG
-pmS9PyFxfkc6CcPwleNaXSIArQsOWAKcuJGC7ITbmlAdXhVWpWlvfpC90BPoVk9C
-3lGZ3FJe4Exy6v4IaWsC7a2qRSMullKKXET7xRlFREQSB3Taz7RO/jUbiaPFXS1p
-KbWINMpHDjfSdGEE0mjGxUhB2LRFDipn9u0B9e2mLPjukBGJPPvLEcAnZ8nO6lvo
-IdcN+U45EeKKMb2cIhgUgPt4Z/Df0wYzlgUkeMDh5TZhNBV8HLKOa+OJ/cHAlbi5
-2/3Z+HGfjh98rr8tGxumFP0GjapIkfq/LTny8suYrNA8BfoIkRbzXGgPHx8ejMIG
-kz3QRAQ1349G5IFiiLDcolLcpGMAvTZa0zUmqoEb0A3aBEQwd3LGiNcypojGVfPw
-YjCURMNnG2MHNh866cFaC3nxS9IW+QbKpL+dKvgNjy+xDgC6IZioXoqT62+wKvsp
-GIJloq06Nsf7NleAwi2lIKuv20+tKw0zLkA9Bb9InM59aIcXBbIbiYib68nTN/SZ
-e7+Y2gPqKQcTsa9snX1vIV7zsXnGxG/p0TM5RvxChO9tUZ6C5U4R1Z6GVC544zPe
-c4FVCcV6MVgDkW+DMeX4+EDlzvLki+SG5G5Ir4zow13mpNDa4OVmTNMPn+EKWzL5
-y1U/y05MHdMM+7gDuL0H
-=M4MV
+iQJ8BAEBCABmBQJVJQMVXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RDFCODdDQUUxMkUwNkJCNjUyMDMxOEIy
+MzI0RTdCNTY2REYyNjExAAoJECMk57Vm3yYR5vcP/j7MS7cZbg8eK2R1eYHOW+4q
+k2JjRA6gxnai9eeoctqGsOgVWkCknXFFKkRinnQWkvQ5K+88r3todIna0GO/UjOb
+g9F7yY+T7MYGV0S04chfV3d8fb/527ASt9IfOBO/CSjsCB/OLV2AidRGUpcEAYvN
+rFfj8suY1TeFGsegLFrJNFt/iOoyPsS3PDynvqqmHk41StC0KA8VyQkFNcZkmDWS
+MNxHOzJP5qdEjanckU+2DEacaVhiqnRQN5RifVDfqSt4JnTxuT5UhXz54nfotBSH
+k68oF7DPHfJ3+jcEbOKeYIZIOk48BHMphB31uoJO2TX6wSOG2ihYa+kU7WSS7p+7
+nEL5azG0LaPw8ujtUKl5UCBy65Hk6loKMIeSUFQIKluk6ppXsj1FIro0kanDPvDL
+ofwt0BL37yR2YvTWEOZB6e8/LIwJFa8geXRsaj0Ny0VzjoXXoIxTa7ihdl39eTXE
+zz9/YjrkcqRhJL3QQ1NOYMZ1cFoUP1AiDKCKVoaqtwkpwvj8vMiwqe7lef1RzPol
+xjAZMR35LdcMy52EfTQwiBiBX2ocSralGO/cnCIuVWr1xKh7KKiVNB1zhhWkXbNU
+DOOJPAH3VG2b1VxHCPcksNV0uHtIS5EpJqlZPfMQIyjkFUwTPZN0/u9qthnI1jlM
+H38LRvldZTMjzROU4l4+
+=uoWg
 -----END PGP SIGNATURE-----
