@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/gnuradio/gnuradio-9999.ebuild,v 1.34 2015/04/01 02:04:47 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/gnuradio/gnuradio-9999.ebuild,v 1.35 2015/04/08 10:29:05 chithanh Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python2_7 )
@@ -32,6 +32,7 @@ REQUIRED_USE="${PYTHON_REQUIRED_USE}
 		portaudio? ( audio )
 		analog? ( filter )
 		digital? ( filter analog )
+		dtv? ( fec )
 		pager? ( filter analog )
 		qt4? ( filter )
 		uhd? ( filter analog )
