@@ -1,6 +1,14 @@
 # ChangeLog for net-wireless/gnuradio
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/gnuradio/ChangeLog,v 1.68 2015/04/01 02:04:47 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/gnuradio/ChangeLog,v 1.70 2015/04/08 10:29:05 chithanh Exp $
+
+  08 Apr 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  gnuradio-9999.ebuild:
+  require fec for dtv, bug #545674.
+
+  08 Apr 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  gnuradio-3.7.6.1-r2.ebuild:
+  require fec for dtv, bug #545674.
 
   01 Apr 2015; Rick Farina <zerochaos@gentoo.org> gnuradio-3.7.6.1-r2.ebuild,
   gnuradio-9999.ebuild:
