@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/usbip
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/usbip/ChangeLog,v 1.8 2015/03/17 15:51:38 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/usbip/ChangeLog,v 1.9 2015/04/08 10:08:46 chithanh Exp $
+
+  08 Apr 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
+  usbip-3.19.ebuild:
+  Remove -Werror from build, bug #545398. Adjust kernel configuration log
+  message.
 
   17 Mar 2015; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
   usbip-3.19.ebuild:
@@ -26,4 +31,3 @@
   07 Mar 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
   +usbip-0.1.7.ebuild, +metadata.xml:
   initial import for bug 220771
-
